apps/jellyseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyseerr.home.dcxxiv.com`)
      middlewares:
        - name: authentik
      services:
        - name: jellyseerr-jellyseerr-chart
          port: 80

  tls:
    secretName: jellyseerr-tls
